# me

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  manage.py  pyproject.toml
server/: settings.py  urls.py
server/templatetags/: static_utils.py
static/: .browserslistrc  .eslintrc.json  .sass-lint.yml  package-lock.json  package.json
static/media/: video_vtt.vtt
static/meta/: browserconfig.xml  site.webmanifest
static/src/js/: header.js  main.js  projects-carousel.js
static/src/js/polyfills/: closest.js  remove.js
static/src/sass/: main.scss
static/src/sass/1_settings/: colours.scss  sizes.scss  typography.scss
static/src/sass/2_tools/: flexbox-mixins.scss  keyframes.scss  mixins.scss
static/src/sass/3_generic/: shared.scss
static/src/sass/4_base/: form.scss  generic.scss  table.scss  typography.scss
static/src/sass/5_objects/: btn.scss  form.scss  slick.scss  wrapper.scss
static/src/sass/6_components/: holding.scss  projects-carousel.scss  site-footer.scss  site-header.scss
static/src/sass/7_trumps/: display.scss  spacing.scss
templates/: _site-meta.html  atoms.html  base.html  components.html  index.html  no-ui.html
templates/atoms/: text.html
templates/atoms/button/: default.html
templates/atoms/form/: checkbox-multiple.html  checkbox-single.html  file.html  radio.html  select.html  submit.html  text-input.html  textarea.html
templates/components/: footer.html  header.html
