[tool.poetry]
name = "static-frontend-base"
version = "1.0.0"
description = "This is a base repository to get started building static frontend templates (Django)."
authors = ["Tom Bannister <tombannister94@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
django = "~3"
django_distill = "~2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
